src/Base/main/default/objects/Partner_Boat_Sale_Settings__c/Partner_Boat_Sale_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting used in the Partner Boat Order tool</description>
    <label>Partner Boat Sale Settings</label>
</CustomObject>