src/Base/main/default/objects/Partner_Boat_Sale_Settings__c/fields/Booking_Order_Begin_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Booking_Order_Begin_Month_Day__c</fullName>
    <description>The Month / Day Partners are allowed to submit their Booking Orders</description>
    <inlineHelpText>Set Month/Day to when we will allow Partners to Submit their Booking Orders</inlineHelpText>
    <label>Booking Order Begin Month Day</label>
    <length>20</length>
    <type>Text</type>
</CustomField>