src/Base/main/default/objects/Partner_Boat_Sale_Settings__c/fields/Enabled_Trailer_Option_Families__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Trailer_Option_Families__c</fullName>
    <description>Comma separated list of Product Families which we want to expose as Options of the Trailer in the Partner Boat Ordering System</description>
    <label>Enabled Trailer Option Families</label>
    <length>255</length>
    <type>Text</type>
</CustomField>